--- a/family-traacking-app/package.json
+++ b/family-traacking-app/package.json
@@ -20,7 +20,9 @@
     "@angular/http": "4.1.3",
     "@angular/platform-browser": "4.1.3",
     "@angular/platform-browser-dynamic": "4.1.3",
+    "@ionic-native/background-geolocation": "^4.3.2",
     "@ionic-native/core": "3.12.1",
+    "@ionic-native/geolocation": "^4.3.2",
     "@ionic-native/native-storage": "^4.2.1",
     "@ionic-native/splash-screen": "3.12.1",
     "@ionic-native/status-bar": "3.12.1",
@@ -30,6 +32,8 @@
     "cordova-android": "^6.2.3",
     "cordova-plugin-console": "^1.0.5",
     "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-geolocation": "^2.4.3",
+    "cordova-plugin-mauron85-background-geolocation": "^2.2.5",
     "cordova-plugin-nativestorage": "^2.2.2",
     "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-statusbar": "^2.2.2",
@@ -59,7 +63,9 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-whitelist": {},
       "ionic-plugin-keyboard": {},
-      "cordova-plugin-nativestorage": {}
+      "cordova-plugin-nativestorage": {},
+      "cordova-plugin-geolocation": {},
+      "cordova-plugin-mauron85-background-geolocation": {}
     },
     "platforms": [
       "android"
